parser/tests/snapshots/litteral_string__tests__multiple_quotes.snap
---
source: parser/tests/litteral_string.rs
expression: "(tokens, parsed)"
---
(
    [
        DoubleQuote,
        DoubleQuote,
        DoubleQuote,
        Litteral(
            "Mutliple",
        ),
        Space,
        Litteral(
            "quotes",
        ),
        DoubleQuote,
        DoubleQuote,
        DoubleQuote,
        DoubleQuote,
        EOF,
    ],
    Ok(
        String(
            "Mutliple quotes",
        ),
    ),
)
