parser/tests/snapshots/litteral_string__tests__no_quotes_start_quotes.snap
---
source: parser/tests/litteral_string.rs
expression: "(tokens, parsed)"
---
(
    [
        Litteral(
            "unmatched",
        ),
        Space,
        Litteral(
            "quotes",
        ),
        DoubleQuote,
        EOF,
    ],
    Ok(
        String(
            "unmatched quotes",
        ),
    ),
)
