parser/tests/snapshots/litteral_string__tests__normal.snap
---
source: parser/tests/litteral_string.rs
expression: "(tokens, parsed)"
---
(
    [
        DoubleQuote,
        Litteral(
            "Normal",
        ),
        Space,
        Litteral(
            "string",
        ),
        DoubleQuote,
        EOF,
    ],
    Ok(
        String(
            "Normal string",
        ),
    ),
)
